[tool.poetry]
name = "benchmark"
version = "0.0.1"
description = ""
authors = ["Yu Yin <yxonic@gmail.com>", "Le Dai <dl123@mail.ustc.edu.cn>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.11.0"
torchdata = "^0.3.0"
numpy = "^1.23.0"
torchtext = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
